--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
+    "@tawk.to/tawk-messenger-react": "^2.0.1",
     "emailjs": "^4.0.0",
     "next": "12.2.3",
     "react": "18.2.0",
